[gd_scene load_steps=9 format=2]

[ext_resource path="res://HUD.gd" type="Script" id=1]
[ext_resource path="res://MainFont.tres" type="DynamicFont" id=2]
[ext_resource path="res://fonts/Xolonium-Regular.ttf" type="DynamicFontData" id=3]
[ext_resource path="res://DifficultyButtonGroup.tres" type="ButtonGroup" id=4]
[ext_resource path="res://SettingsFont.tres" type="DynamicFont" id=5]

[sub_resource type="DynamicFont" id=3]
size = 32
font_data = ExtResource( 3 )

[sub_resource type="InputEventAction" id=1]
action = "ui_select"

[sub_resource type="ShortCut" id=2]
shortcut = SubResource( 1 )

[node name="HUD" type="CanvasLayer"]
script = ExtResource( 1 )

[node name="MessageLabel" type="Label" parent="."]
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
margin_top = -79.5
margin_bottom = 79.5
custom_fonts/font = ExtResource( 2 )
text = "Dodge The Creeps!"
align = 1
valign = 1
autowrap = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ScoreLabel" type="Label" parent="."]
visible = false
anchor_right = 1.0
margin_bottom = 78.0
custom_fonts/font = ExtResource( 2 )
text = "0"
align = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="SettingsButton" type="Button" parent="."]
anchor_right = 1.0
margin_bottom = 45.0
custom_fonts/font = SubResource( 3 )
text = "Settings"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="StartButton" type="Button" parent="."]
anchor_left = 0.5
anchor_top = 0.9
anchor_right = 0.5
anchor_bottom = 0.9
margin_left = -90.0
margin_top = -100.0
margin_right = 90.0
custom_fonts/font = ExtResource( 2 )
shortcut = SubResource( 2 )
text = "Start"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="MessageTimer" type="Timer" parent="."]
wait_time = 1.5
one_shot = true

[node name="EasyButton" type="Button" parent="."]
visible = false
anchor_top = 0.25
anchor_right = 0.333
anchor_bottom = 0.25
margin_bottom = 45.0
custom_fonts/font = ExtResource( 5 )
toggle_mode = true
group = ExtResource( 4 )
text = "Easy"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="MedButton" type="Button" parent="."]
visible = false
anchor_left = 0.333
anchor_top = 0.25
anchor_right = 0.667
anchor_bottom = 0.25
margin_left = 0.160004
margin_right = -0.160004
margin_bottom = 64.0
custom_fonts/font = ExtResource( 5 )
toggle_mode = true
pressed = true
group = ExtResource( 4 )
text = "Med"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="HardButton" type="Button" parent="."]
visible = false
anchor_left = 0.667
anchor_top = 0.25
anchor_right = 1.0
anchor_bottom = 0.25
margin_bottom = 45.0
custom_fonts/font = ExtResource( 5 )
toggle_mode = true
group = ExtResource( 4 )
text = "Hard"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="BackButton" type="Button" parent="."]
visible = false
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
margin_bottom = 84.0
custom_fonts/font = ExtResource( 2 )
text = "Back"
__meta__ = {
"_edit_use_anchors_": false
}
